--- a/src/components/FriendCard/FriendCard.css
+++ b/src/components/FriendCard/FriendCard.css
@@ -1,7 +1,7 @@
 .card {
   background: #fff;
   border-radius: 2px;
-  height: 325px;
+  height: 250px;
   margin: 1rem;
   position: relative;
   width: 325px;
@@ -10,7 +10,7 @@
 }
 
 .card > .img-container {
-  height: 60%;
+  height: 100%;
   overflow: hidden;
   text-align: center;
   background:#6CADDC;
@@ -33,15 +33,6 @@
   margin-top: 18px;
 }
 
-.card > .remove {
-  color: #ff1744;
-  font-size: 48px;
-  position: absolute;
-  top: -20px;
-  right: 5px;
-  cursor: pointer;
-}
-
-.card > .remove:hover {
-  color: #d50000;
+.card > .img-container:hover {
+  background:rgb(22, 85, 131);
 }
